fixed everything to fit on mobile as well

--- a/src/index.css
+++ b/src/index.css
@@ -68,15 +68,15 @@
               
 }
 
- @keyframes appear {
-                from {
-                    opacity: 0;
-                    scale: 0.5;
-                }
-                to {
-                    opacity: 1;
-                    scale: 1;
-            }
+/* @keyframes appear {
+          from {
+          opacity: 0;
+            scale: 0.5;
+          }
+          to {
+            opacity: 1;
+            scale: 1;
+          }
         }
             
 
@@ -86,7 +86,7 @@
                 animation-range: entry 0% cover 40%; 
             }
 
-
+ */
 
 
 @layer base{
